[project]
name = "resumae-maker-with-ats-improver-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.56.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "spacy>=3.8.11",
    "spacy-layout>=0.0.12",
]
