[project]
name = "resumae-maker-with-ats-improver-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.66.0",
    "google-genai>=1.56.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-nvidia-ai-endpoints>=1.4.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "onnxruntime>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pylatex>=1.4.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.11",
    "spacy-layout>=0.0.12",
]
